Ensure that mobile and tablet view initiate in dark mode

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,6 @@
 /* Global Styles */
 body {
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 input {
